AGT-6 añade admin de dispositivos
